# screen-agent

./: .gitignore  DEVPATH.md  INTERVIEW_PREP.md  README.md  pyproject.toml
.github/workflows/: ci.yml
examples/: basic_usage.py  claude_code_setup.md
src/screen_agent/: __init__.py  __main__.py  capture.py  cli.py  config.py  errors.py  guardian.py  input.py  server.py  types.py  window.py
src/screen_agent/engine/: __init__.py  guardian.py  input_chain.py  screen_state.py  test_runner.py  window_session.py
src/screen_agent/mcp/: __init__.py  handlers.py  server.py  tools.py
src/screen_agent/platform/: __init__.py  coords.py  protocols.py
src/screen_agent/platform/cdp/: __init__.py  client.py  session.py
src/screen_agent/platform/linux/: __init__.py  capture.py  input.py  window.py  window_capture.py
src/screen_agent/platform/macos/: capture.py  input_ax.py  input_ax_targeted.py  input_cg.py  input_pyautogui.py  vision.py  window.py  window_capture.py
src/screen_agent/platform/windows/: __init__.py  window_capture.py
src/screen_agent/plugins/: __init__.py  ocr.py
src/screen_agent/testing/: __init__.py  mcp_tools.py  reporter.py  session.py  verifier.py
test-app/: index.html
tests/integration/: test_mcp_handlers.py
tests/unit/: test_config.py  test_coords.py  test_errors.py  test_guardian.py  test_input_chain.py  test_screen_state.py  test_types.py
